<resources>
    <string name="app_name">goConcert</string>
    <string name="bandas_de_rock">Bandas de Rock</string>
    <string name="belo_horizonte">Belo Horizonte</string>
    <string name="banner_inicial">banner inicial</string>
    <string name="imagem_da_banda">imagem da banda</string>
    <string name="data">17/04/2021</string>
    <string name="dia_hora">Sab - 21:00</string>
    <string name="ingressos_disponiveis">Ainda temos ingressos disponíveis!!!</string>
    <string name="informacao_pagamento">Digite as informções do cartão que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AAAA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="btnfinalizar_compra">Button</string>
    <string name="mensagem_sucesso">Compra realizada com sucesso!!</string>
    <string name="parabens">Parabéns</string>
    <string name="mensagem_resumo">Confira a o resumo da compra</string>
    <string name="pista">Pista</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="camarote">Camarote</string>
</resources>
