<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ConclusaoCompraActivity">

    <ImageView
        android:id="@+id/conclusao_compra_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/banner_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/button" />

    <TextView
        android:id="@+id/conclusao_compra_parabéns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/parabens"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/conclusao_compra_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/conclusao_compra_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/conclusao_compra_realizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mensagem_sucesso"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/conclusao_compra_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/conclusao_compra_banner"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_parabéns"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/conclusao_compra_confira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mensagem_resumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_banner" />

    <ImageView
        android:id="@+id/conclusao_compra_imagem"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_da_banda"
        android:scaleType="matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_confira"
        app:srcCompat="@drawable/scalene" />

    <TextView
        android:id="@+id/conclusao_compra_banda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_imagem"
        tools:text="Scalene" />

    <TextView
        android:id="@+id/conclusao_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/conclusao_compra_banda"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_banda"
        tools:text="17/05/2021" />

    <TextView
        android:id="@+id/conclusao_compra_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/conclusao_compra_data"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_data"
        tools:text="R$ 49,90" />

    <TextView
        android:id="@+id/conclusao_compra_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_banda"
        tools:text="Palácio das Artes" />

    <TextView
        android:id="@+id/conclusao_compra_data_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/conclusao_compra_data"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_banda"
        tools:text="Sab - 21:00" />

    <Button
        android:id="@+id/conclusao_compra_btnVoltarInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_redondo_azul"
        android:text="Voltar ao inicio"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conclusao_compra_preco"
        app:layout_constraintVertical_bias="0.217" />
</androidx.constraintlayout.widget.ConstraintLayout>